--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+grapth.iml
+grapth.ipr
+grapth.iws
+grapths-algortihms.iml
+.idea
+
